--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "chai": "^4.1.2",
+    "globby": "^8.0.1",
     "mocha": "^5.2.0"
+  },
+  "scripts": {
+    "test": "mocha test/test.js"
   }
 }
