--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "globby": "^8.0.1",
-    "mocha": "^5.2.0"
+    "jest": "^23.6.0"
   },
   "scripts": {
-    "test": "mocha test/test.js -s 1"
+    "test": "jest test/test.js"
   }
 }
